--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -12,7 +6,38 @@
 
 </ion-header>
 
-
 <ion-content padding>
+
+  <ion-avatar>
+    <img  [src]="../../assets/imgs/logo.png"  *ngIf=""/>
+  </ion-avatar>
+
+  <ion-list>
+
+    <ion-item class="item">
+      <ion-label floating>Username</ion-label>
+      <ion-input type="text" class="username"></ion-input>
+    </ion-item>
+
+    <ion-item class="item">
+      <ion-label floating>First Name</ion-label>
+      <ion-input type="text" class="firstname"></ion-input>
+    </ion-item>
+
+    <ion-item class="item">
+      <ion-label floating>Last Name</ion-label>
+      <ion-input type="text" class="lastname"></ion-input>
+    </ion-item>
+
+    <ion-item class="item">
+      <ion-label floating>Profile Picture</ion-label>
+      <ion-input type="text" class="profilepic"></ion-input>
+    </ion-item>
+
+    <button ion-button round class="save">
+      Save
+    </button>
+
+  </ion-list>
 
 </ion-content>
