--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -7,12 +7,34 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>RegisterPage</ion-title>
+    <ion-title>Registration</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
 <ion-content padding>
+
+  <ion-list>
+  
+    <ion-item class="item">
+      <ion-label floating>Email</ion-label>
+      <ion-input type="text" class="email" [(ngModel)]="account.email" ></ion-input>
+    </ion-item>
+  
+    <ion-item class="item">
+      <ion-label floating>Password</ion-label>
+      <ion-input type="text" class="password" [(ngModel)]="account.password"></ion-input>
+    </ion-item>
+  
+    <ion-item class="item">
+      <ion-label floating>Verify Password</ion-label>
+      <ion-input type="text" class="password" [(ngModel)]="password" ></ion-input>
+    </ion-item>
+  
+    <button ion-button round (click)="register()" class="submit">
+      Submit
+    </button>
+  
+  </ion-list>
 
 </ion-content>
