Disabled email verification for testing

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,7 +21,7 @@
   
     <ion-item class="item">
       <ion-label floating>Password</ion-label>
-      <ion-input type="text" class="password" [(ngModel)]="account.password" ></ion-input>
+      <ion-input type="password" class="password" [(ngModel)]="account.password" ></ion-input>
     </ion-item>
 
     <button ion-button round (click)="login()" class="login">
