--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -23,12 +23,12 @@
   
     <ion-item class="item">
       <ion-label floating>Password</ion-label>
-      <ion-input type="text" class="password" [(ngModel)]="account.password"></ion-input>
+      <ion-input type="password" class="password" [(ngModel)]="account.password"></ion-input>
     </ion-item>
   
     <ion-item class="item">
       <ion-label floating>Verify Password</ion-label>
-      <ion-input type="text" class="password" [(ngModel)]="password" ></ion-input>
+      <ion-input type="password" class="password" [(ngModel)]="password" ></ion-input>
     </ion-item>
   
     <button ion-button round (click)="register()" class="submit">
