Fixed nav and login

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
           </ion-title>
       
           <ion-buttons end>
-            <button ion-button icon-only (click)="openModal()">
+            <button ion-button icon-only (click)="openProfileModal()">
               <ion-icon name="contact"></ion-icon>
             </button>
           </ion-buttons>
