updated sytle sheet

--- a/src/pages/modal-profile/modal-profile.html
+++ b/src/pages/modal-profile/modal-profile.html
@@ -18,6 +18,7 @@
   <ion-list>
 
     <button ion-item detail-none (click)="editProfile()" class="edit">
+      <ion-icon name="md-create" class="icon"></ion-icon>
       Edit
     </button>
 
