Fixed Profile initialization

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -9,7 +9,7 @@
 <ion-content padding>
 
   <ion-avatar>
-    <img  [src]="../../assets/imgs/logo.png"  *ngIf=""/>
+    <img  src="../../assets/imgs/logo.png"  *ngIf=""/>
   </ion-avatar>
 
   <ion-list>
