--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,10 +1,3 @@
-<!--
-  Generated template for the IntroPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-
 <ion-content>
 
   <ion-slides pager (ionSlideDidChange)="slideChanged()" (ionSlideDrag)="slideMoved()">
@@ -17,48 +10,48 @@
         <h2>Welcome to Mapster</h2>
         <p>A location based social media experience to bring you closer to all your friends.</p>
       </div>
-      <div class="skipper">
-        <p (click)="skip()" id="skip">{{ skipMsg }}</p>
-      </div>
+      <button ion-button small color="primary" (click)="skip()" class="skip">
+        Skip
+      </button>
     </ion-slide>
 
     <ion-slide class="slide2">
       <div class="diag">
-        <ion-icon ios="ios-map" md="md-map" color="primary" [@bounce]='state' (@bounce.done)="animationDone($event)"></ion-icon>
+        <ion-icon name="map" color="primary" [@bounce]='state' (@bounce.done)="animationDone($event)"></ion-icon>
       </div>
       <div>
         <h2>Find friends nearby</h2>
         <p>Find new spots to hangout and upload your favorites.</p>
       </div>
-      <div class="skipper">
-        <p (click)="skip()" id="skip">{{ skipMsg }}</p>
-      </div>
+      <button ion-button small color="primary" (click)="skip()" class="skip">
+        Skip
+      </button>
     </ion-slide>
 
     <ion-slide class="slide3">
       <div class="diag">
-        <ion-icon ios="ios-camera" md="md-camera" color="primary" [@bounce]='state' (@bounce.done)="animationDone($event)"></ion-icon>
+        <ion-icon name="camera" color="primary" [@bounce]='state' (@bounce.done)="animationDone($event)"></ion-icon>
       </div>
       <div>
         <h2>Upload your images</h2>
         <p>Share your favorite locations with an image to capture all the details.</p>
       </div>
-      <div class="skipper">
-        <p (click)="skip()" id="skip">{{ skipMsg }}</p>
-      </div>
+      <button ion-button small color="primary" (click)="skip()" class="skip">
+        Skip
+      </button>
     </ion-slide>
 
     <ion-slide class="slide4">
       <div class="diag">
-        <ion-icon ios="ios-chatboxes" md="md-chatboxes" color="primary" [@bounce]='state' (@bounce.done)="animationDone($event)"></ion-icon>
+        <ion-icon name="chatboxes" color="primary" [@bounce]='state' (@bounce.done)="animationDone($event)"></ion-icon>
       </div>
       <div>
         <h2>Chat with others</h2>
         <p>Communicate with your friends or make new ones that are nearby.</p>
       </div>
-      <div class="skipper">
-        <p (click)="skip()" id="skip">{{ skipMsg }}</p>
-      </div>
+      <button ion-button small color="primary" (click)="skip()" class="skip">
+        Get started now
+      </button>
     </ion-slide>
 
   </ion-slides>
