Showing the map

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,25 +6,13 @@
 -->
 <ion-header>
 
-  <ion-navbar no-border>
-    <button ion-button icon-only menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-
-    <ion-title>
-      HomePage
-    </ion-title>
-
-    <ion-buttons end>
-      <button ion-button icon-only (click)="openProfileModal()">
-        <ion-icon name="contact"></ion-icon>
-      </button>
-    </ion-buttons>
+  <ion-navbar>
+    <ion-title>MAPS</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+<div id = map_canvas></div>
 </ion-content>
