--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,22 +4,13 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header no-border>
 
-  <ion-navbar no-border>
-    <button ion-button icon-only menuToggle>
-      <ion-icon name="menu"></ion-icon>
+  <ion-navbar transparent>
+
+    <button ion-button menuToggle>
+      <ion-icon name="menu" color="primary"></ion-icon>
     </button>
-
-    <ion-title>
-      HomePage
-    </ion-title>
-
-    <!-- <ion-item class="profile">
-      <ion-avatar item-end >
-        <img src="/assets/icon/profile_image_placeholder.png">
-      </ion-avatar>
-    </ion-item> -->
 
     <ion-buttons end class="profile">
       <button ion-button icon-only (click)="openProfileModal()">
@@ -35,8 +26,8 @@
 
 <ion-content>
   <div id="map_canvas">
-    <h2 style="text-align: center">
+    <!-- <h2 style="text-align: center">
       RE-ENABLE MAPS!
-    </h2>
+    </h2> -->
   </div>
 </ion-content>
