--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,13 +4,17 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header no-border>
+<ion-header>
 
-  <ion-navbar transparent>
+  <ion-navbar>
 
     <button ion-button menuToggle>
       <ion-icon name="menu" color="primary"></ion-icon>
     </button>
+
+    <ion-title>
+      Home
+    </ion-title>
 
     <ion-buttons end class="profile">
       <button ion-button icon-only (click)="openProfileModal()">
