--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -68,7 +68,7 @@
     </h2> -->
   </div>
 
-  <ion-fab left bottom>
+  <ion-fab right bottom>
     <button ion-fab color="primary">
       <ion-icon name="add"></ion-icon>
     </button>
